--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 astroid==3.1.0
 dill==0.3.8
+iniconfig==2.0.0
 isort==5.13.2
 mccabe==0.7.0
 numpy==1.26.4
+packaging==24.0
 pandas==2.2.1
 platformdirs==4.2.0
+pluggy==1.4.0
 pylint==3.1.0
+pytest==8.1.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 six==1.16.0
